k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: onlineshop-svc
  namespace: onlineshop

spec:
  selector:
      app: online-shop
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
